updated create wedding form - now working

--- a/public_html/templates/create-wedding.html
+++ b/public_html/templates/create-wedding.html
@@ -13,57 +13,61 @@
 				<form class="form-horizontal" name="createWeddingForm" id="createWeddingForm" [formGroup]="createWeddingForm" novalidate (ngSubmit)="createWedding();">
 					<!-- Company -->
 						<div class="form-group">
-							<label for="companyName" class="col-form-label">Company:</label>
-							<input type="text" class="form-control" id="companyName" formControlName="companyName">
+							<label for="weddingCompany" class="col-form-label"><span style="color:red;">*</span>Company:</label>
+							<input type="text" class="form-control" id="weddingCompany" formControlName="weddingCompany">
 						</div>
 						<!-- Angular Validation -->
-						<div class="alert alert-danger"
-							  *ngIf="signUpForm.controls.companyName?.invalid && signUpForm.controls.companyName?.touched">
-							<p *ngIf="signUpForm.controls.companyName?.errors.maxlength">Company is too long</p>
-							<p *ngIf="signUpForm.controls.companyName?.errors.required">Company is required</p>
+						<div class="alert alert-danger" *ngIf="createWeddingForm.controls.weddingCompany?.invalid && createWeddingForm.controls.weddingCompany?.touched">
+							<p *ngIf="createWeddingForm.controls.weddingCompany?.errors.maxlength">Company is too long</p>
+							<p *ngIf="createWeddingForm.controls.weddingCompany?.errors.required">Company is required</p>
 						</div>
 
 					<!-- Wedding Name -->
 						<div class="form-group">
-							<label for="weddingName" class="col-form-label">Wedding Name:</label>
+							<label for="weddingName" class="col-form-label"><span style="color:red;">*</span>Wedding Name:</label>
 							<input type="text" class="form-control" id="weddingName" formControlName="weddingName">
 						</div>
 						<!-- Angular Validation -->
-						<div class="alert alert-danger"
-							  *ngIf="signUpForm.controls.weddingName?.invalid && signUpForm.controls.weddingName?.touched">
-							<p *ngIf="signUpForm.controls.weddingName?.errors.maxlength">Wedding Name is too long</p>
-							<p *ngIf="signUpForm.controls.weddingName?.errors.required">Wedding Date is required</p>
+						<div class="alert alert-danger" *ngIf="createWeddingForm.controls.weddingName?.invalid && createWeddingForm.controls.weddingName?.touched">
+							<p *ngIf="createWeddingForm.controls.weddingName?.errors.maxlength">Wedding Name is too long</p>
+							<p *ngIf="createWeddingForm.controls.weddingName?.errors.required">Wedding Date is required</p>
 						</div>
 
 					<!-- Wedding Date -->
 					<div class="form-row">
 						<div class="form-group col-md-6">
-							<label for="weddingDate" class="col-form-label">Wedding Date:</label>
+							<label for="weddingDate" class="col-form-label"><span style="color:red;">*</span>Wedding Date:</label>
 							<input type="date" class="form-control" id="weddingDate" formControlName="weddingDate">
 						</div>
 						<!-- Angular Validation -->
-						<div class="alert alert-danger"
-							  *ngIf="signUpForm.controls.weddingDate?.invalid && signUpForm.controls.weddingDate?.touched">
-							<p *ngIf="signUpForm.controls.weddingDate?.errors.maxlength">Wedding Date is too long</p>
-							<p *ngIf="signUpForm.controls.weddingDate?.errors.required">Wedding Date is required</p>
+						<div class="alert alert-danger" *ngIf="createWeddingForm.controls.weddingDate?.invalid && createWeddingForm.controls.weddingDate?.touched">
+							<p *ngIf="createWeddingForm.controls.weddingDate?.errors.maxlength">Wedding Date is too long</p>
+							<p *ngIf="createWeddingForm.controls.weddingDate?.errors.required">Wedding Date is required</p>
 						</div>
 
 						<!--Return By Date -->
 						<div class="form-group col-md-6">
-							<label for="weddingReturnByDate" class="col-form-label">Return By Date:</label>
+							<label for="weddingReturnByDate" class="col-form-label"><span style="color:red;">*</span>Return By Date:</label>
 							<input type="date" class="form-control" id="weddingReturnByDate"
 									 formControlName="weddingReturnByDate">
 						</div>
 						<!-- Angular Validation -->
 						<div class="alert alert-danger"
-							  *ngIf="signUpForm.controls.weddingReturnByDate?.invalid && signUpForm.controls.weddingReturnByDate?.touched">
-							<p *ngIf="signUpForm.controls.weddingReturnByDate?.errors.maxlength">Return By Date is too long</p>
-							<p *ngIf="signUpForm.controls.weddingReturnByDate?.errors.required">Return By Date is required</p>
+							  *ngIf="createWeddingForm.controls.weddingReturnByDate?.invalid && createWeddingForm.controls.weddingReturnByDate?.touched">
+							<p *ngIf="createWeddingForm.controls.weddingReturnByDate?.errors.maxlength">Return By Date is too long</p>
+							<p *ngIf="createWeddingForm.controls.weddingReturnByDate?.errors.required">Return By Date is required</p>
 						</div>
 					</div>
+
+					<!-- Indicates Required Field -->
+					<div class="form-group">
+						<span class="text-muted"><em><span style="color:red;">*</span> Indicates required field</em></span>
+					</div>
+
+					<!-- Create Wedding -->
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-						<button type="submit" id="signUp" name="signUp" class="btn btn-warning">Create Wedding</button>
+						<button type="submit" id="createWedding" name="createWedding" class="btn btn-warning">Create Wedding</button>
 					</div>
 				</form>
 			</div>
