--- a/public_html/templates/home.html
+++ b/public_html/templates/home.html
@@ -21,8 +21,8 @@
 				<td>9/1/17</td>
 				<td>3 of 6 (50%)</td>
 				<td>Needs Review</td>
-				<td><i class="fa fa-pencil-square-o" aria-hidden="true"></i></td>
-				<td><i class="fa fa-search" aria-hidden="true"></i></td>
+				<td><a class="btn" (click)="switchWedding(wedding);"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></td>
+				<td><a class="btn" (click)="switchWedding(wedding);"><i class="fa fa-search" aria-hidden="true"></i></a></td>
 			</tr>
 		</table>
 </section>
