--- a/public_html/templates/wedding-detail.html
+++ b/public_html/templates/wedding-detail.html
@@ -1,5 +1,6 @@
 <!-- Selectors -->
 <navigation-top></navigation-top>
+<add-groomsman></add-groomsman>
 
 <section class="m-3">
 	<h1 class="mb-3">Weddings Details</h1>
@@ -8,7 +9,7 @@
 	<h6 class="m-2">Return By Date:</h6>
 	<h6 class="m-2">Wedding Date:</h6>
 	<h6 class="m-2">Store:</h6>
-	<a href="#" data-toggle="modal" data-target="#createWedding" class="create-button my-4">Add A Groomsman</a>
+	<a href="#" data-toggle="modal" data-target="#addGroomsman" class="create-button my-4">Add A Groomsman</a>
 	<table class="table text-center table-striped table-bordered table-hover mt-4">
 		<tr>
 			<th>Name</th>
