--- a/public_html/templates/home.html
+++ b/public_html/templates/home.html
@@ -5,24 +5,63 @@
 	<h1 class="mb-3">Weddings</h1>
 	<p>Welcome to Tux, to get started just select create wedding and add your groomsman contact information.</p>
 	<a href="#" data-toggle="modal" data-target="#createWedding" class="create-button mb-3">Create Wedding</a>
-		<table class="table text-center table-striped table-bordered table-hover mt-4">
-			<tr>
-				<th>Wedding Name</th>
-				<th>Wedding Date</th>
-				<th>Return Card By Date</th>
-				<th>Card Received</th>
-				<th>Status</th>
-				<th>Edit</th>
-				<th>Review</th>
-			</tr>
-			<tr>
-				<td>Zach Spangler & Mallory Markham</td>
-				<td>9/23/17</td>
-				<td>9/1/17</td>
-				<td>3 of 6 (50%)</td>
-				<td>Needs Review</td>
-				<td><a class="btn" (click)="switchWedding(wedding);"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></td>
-				<td><a class="btn" (click)="switchWedding(wedding);"><i class="fa fa-search" aria-hidden="true"></i></a></td>
-			</tr>
-		</table>
+	<div class="my-5" id="accordion" role="tablist" aria-multiselectable="true">
+		<div class="card">
+			<div class="card-header" role="tab" id="headingOne">
+				<h5 class="mb-0">
+					<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+						Your Weddings <i class="fa fa-chevron-down" aria-hidden="true"></i>
+					</a>
+				</h5>
+			</div>
+
+			<div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
+				<table class="table text-center table-striped table-bordered table-hover mt-4">
+					<tr>
+						<th>Wedding Name</th>
+						<th>Wedding Date</th>
+						<th>Return Card By Date</th>
+						<th>Card Received</th>
+						<th>Status</th>
+						<th>Edit</th>
+						<th>Review</th>
+					</tr>
+					<tr>
+						<td>Zach Spangler & Mallory Markham</td>
+						<td>9/23/17</td>
+						<td>9/1/17</td>
+						<td>3 of 6 (50%)</td>
+						<td>Needs Review</td>
+						<td><a class="btn" (click)="switchWedding(wedding);"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></td>
+						<td><a class="btn" (click)="switchWedding(wedding);"><i class="fa fa-search" aria-hidden="true"></i></a></td>
+					</tr>
+				</table>
+			</div>
+		</div>
+		<div class="card">
+			<div class="card-header" role="tab" id="headingTwo">
+				<h5 class="mb-0">
+					<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+						Your Cards <i class="fa fa-chevron-down" aria-hidden="true"></i>
+					</a>
+				</h5>
+			</div>
+			<div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
+				<table class="table text-center table-striped table-bordered table-hover mt-4">
+					<tr>
+						<th>Card Number</th>
+						<th>Wedding Name</th>
+						<th>Company</th>
+						<th>Status</th>
+					</tr>
+					<tr>
+						<td>1hsd-dfkd-dfas-234j</td>
+						<td>Spangler/Markham</td>
+						<td>Mr. Tux</td>
+						<td>Invited</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+	</div>
 </section>
