--- a/public_html/templates/sign-out.html
+++ b/public_html/templates/sign-out.html
@@ -6,11 +6,11 @@
 				<h5 class="modal-title">Sign-out</h5>
 			</div>
 			<div class="modal-body">
-				<p>Press close to sign out</p>
+				<p>Are you sure you want to Sign-out?</p>
 			</div>
 			<div class="modal-footer">
 				<button class="btn btn-danger ml-3" data-dismiss="modal" type="submit" value="Cancel"><i class="fa fa-ban"></i> Cancel</button>
-				<button type="button" class="btn btn-primary" data-dismiss="modal"><span aria-hidden="true" (click)="signOut();">Close</span></button>
+				<button type="button" class="btn btn-primary" data-dismiss="modal"><span aria-hidden="true" (click)="signOut();">Signout</span></button>
 			</div>
 		</div>
 	</div>
